# smart-road

./: ADUIT.md  Cargo.toml  README.md  build.rs  run.sh
.claude/: settings.local.json
assets/: README.txt
src/: algorithm.rs  block_renderer.rs  block_system.rs  constants.rs  direction.rs  game.rs  input.rs  intersection.rs  main.rs  modal.rs  renderer.rs  simple_renderer.rs  smart_algorithm.rs  statistics.rs  trees.rs  vehicle.rs  vehicle_manager.rs  vehicle_positions.rs
src/core/: collision_detector.rs  collision_resolver.rs  mod.rs  path_calculator.rs  vehicle_data.rs
src/geometry/: mod.rs  position.rs  rect_extensions.rs  spawn.rs
src/intersection/: bounds.rs  mod.rs  turning.rs
src/rendering/: mod.rs  road_renderer.rs  stats_display.rs
src/simulation/: mod.rs  statistics.rs  vehicle_manager.rs
